--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -10,6 +10,15 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require OpenLayers
  *= require_tree .
  *= require_self
  */
+
+#content
+  bottom: 0
+  display: hidden
+  left: 0
+  position: absolute
+  right: 0
+  top: 51px
