--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
         </div>
     </nav>
     <div id="ol-map"></div>
-    <div id="content">
+    <div id="content" class="container">
       <%= yield %>
     </div>
   </body>
