--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -1,8 +1,17 @@
 @import "bootstrap-sprockets"
 @import "bootstrap"
 
-nav .glyphicon
+h4,
+.h4
+  font-size: 16px
+  font-weight: bold
+
+nav .glyphicon,
+.modal-header .glyphicon
   padding-right: 0.5em
+
+nav.navbar-fixed-bottom .btn-group
+  padding-top: 0.5em
 
 .has-feedback.has-clear
   /* Remove Internet Explorer native clear button */
