Vertikalen Versatz des Labels vermeiden

--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -31,3 +31,6 @@ nav.navbar-fixed-bottom .btn-group
       color: #777
       color: rgba(0, 0, 0, 0.7)
       cursor: pointer
+
+  .input-group .glyphicon
+    top: 0
