--- a/app/views/application/_create.html.erb
+++ b/app/views/application/_create.html.erb
@@ -8,7 +8,7 @@
       <p><%= msg.html_safe %></p>
     <% end -%>
   <% else -%>
-    <%= t('messages.success') %>
+    <%= @success || t('messages.success') %>
   <% end -%>
 </div>
 <div class="modal-footer">
