--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -16,16 +16,12 @@
  */
 
 #content
-  bottom: 0
-  display: hidden
   left: 0
-  margin-top: 2em
-  position: absolute
+  margin-top: 5em
   right: 0
-  top: 51px
 
   div.request
-    margin-bottom: 51px
+    margin-bottom: 4em
 
 .clickable
   cursor: pointer
