--- a/app/views/requests/_index.html.erb
+++ b/app/views/requests/_index.html.erb
@@ -1,10 +1,8 @@
 <div class="requests">
   <div class="panel panel-default">
-    <div class="panel-heading">
-      <div class="clickable" data-target="<%= requests_path %>">
-        <%= t('.title') %>
-        <span class="badge pull-right"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></span>
-      </div>
+    <div class="panel-heading clickable" data-target="<%= requests_path %>">
+      <%= t('.title') %>
+      <span class="badge pull-right"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></span>
     </div>
     <% if @requests.present? -%>
       <div class="list-group">
