--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
             <li>
               <a href="#" title="Standort aktualisieren">
                 <span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span>
-                <span class="hidden-sm hidden-md">Standort aktualisieren</span>
+                <span class="hidden-sm hidden-md">Standort</span>
               </a>
             </li>
             <li>
@@ -36,7 +36,7 @@
             <li>
               <a href="#" class="layer-switcher" title="Kartenhintergrund ändern">
                 <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
-                <span class="hidden-sm hidden-md">Kartenhintergrund ändern</span>
+                <span class="hidden-sm hidden-md">Kartenhintergrund</span>
               </a>
             </li>
             <li>
