--- a/app/views/requests/_show.html.erb
+++ b/app/views/requests/_show.html.erb
@@ -1,7 +1,7 @@
 <div class="request">
   <div class="panel panel-default">
     <div class="panel-heading clickable" data-target="<%= request_path(@request) %>">
-      <h4>
+      <h4 class="panel-title">
         <%= image_tag(image_path(@request.icon), alt: "#{ @request.service.type }, #{ @request.extended_attributes.detailed_status }") %>
         <%= @request.service.type.humanize %>
         #<%= @request.id %>
@@ -64,20 +64,19 @@
           </div>
         </div>
       <% end -%>
-      <div class="list-group-item">
-        <h4 class="list-group-item-heading clickable" data-target="<%= request_path(@request) %>">
-          <%= Note.model_name.human %>
-          <span class="badge pull-right"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></span>
-        </h4>
-        <div class="list-group-item-text">
-          <% @request.notes.each do |note| -%>
-            <div class="panel panel-default">
-              <div class="panel-heading"><%= note.author %>, <%= l(note.datetime.to_time) %></div>
-              <div class="panel-body"><%= note.comment %></div>
-            </div>
-          <% end -%>
+      <% if (notes = @request.notes.to_a).present? -%>
+        <div class="list-group-item">
+          <h4 class="list-group-item-heading"><%= Note.model_name.human %></h4>
+          <div class="list-group-item-text">
+            <% notes.each do |note| -%>
+              <div class="panel panel-default">
+                <div class="panel-heading"><%= note.author %>, <%= l(note.datetime.to_time) %></div>
+                <div class="panel-body"><%= note.comment %></div>
+              </div>
+            <% end -%>
+          </div>
         </div>
-      </div>
+      <% end -%>
     </div>
   </div>
   <nav class="navbar navbar-default navbar-fixed-bottom">
