Erstellung interner Kommentare; Rücksprung nach Flash-Notice auf den entsprechenden Vorgang

--- a/app/views/notes/_new.html.erb
+++ b/app/views/notes/_new.html.erb
@@ -11,23 +11,12 @@
             <%= f.text_area(:comment, rows: 4, class: 'form-control', placeholder: t('placeholder.note')) %>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-8">
-            <div class="form-group has-feedback has-clear">
-              <div class="input-group">
-                <span class="input-group-addon">@</span>
-                <%= f.text_field(:author, class: 'form-control', placeholder: t('placeholder.email')) %>
-              </div>
-              <span class="glyphicon glyphicon-remove-circle form-control-feedback form-control-clear" aria-hidden="true"></span>
+        <div class="form-group">
+          <div class="btn-group btn-group-justified" role="group">
+            <div class="btn-group" role="group">
+              <%= f.submit(t('buttons.submit'), class: 'btn btn-default btn-primary') %>
             </div>
-          </div>
-          <div class="col-md-4 form-group">
-            <div class="btn-group btn-group-justified" role="group">
-              <div class="btn-group" role="group">
-                <%= f.submit(t('buttons.submit'), class: 'btn btn-default btn-primary') %>
-              </div>
-              <%= link_to(t('buttons.cancel'), @request, remote: true, class: 'btn btn-default', role: :button) %>
-            </div>
+            <%= link_to(t('buttons.cancel'), @request, remote: true, class: 'btn btn-default', role: :button) %>
           </div>
         </div>
       <% end %>
