--- a/app/assets/javascripts/maps.coffee.erb
+++ b/app/assets/javascripts/maps.coffee.erb
@@ -2,6 +2,8 @@
 # All this logic will automatically be available in application.js.
 # You can use CoffeeScript in this file: http://coffeescript.org/
 
+maxZoom = 10
+
 KS.projection = ->
   if typeof proj4 is 'function'
     proj4.defs 'EPSG:25833', '+proj=utm +zone=33 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs'
@@ -21,7 +23,7 @@ class KS.Map
         projection: @projection
         center: [395965.1854276612, 5994624.339351959] #[313356.88711652, 6002555.7959791]
         zoom: 2
-        maxZoom: 10
+        maxZoom: maxZoom
 
     KS.layers = new KS.Layers(@olMap)
     addControls(@olMap)
@@ -42,6 +44,26 @@ class KS.Map
       undefinedHTML: '?,?'
 
     map.addControl new ol.control.ScaleLine
+
+    map.on 'click', (e) ->
+      map.forEachFeatureAtPixel e.pixel, (feature, layer) ->
+        if layer and (layer.get('id') == 'features' or layer.get('id') == 'jobs')
+          features = feature.get('features')
+          if features.length == 1
+            # Single feature -> show
+            $.ajax(url: "/requests/" + features[0].get("id"), dataType: 'script')
+          else if map.getView().getZoom() == maxZoom
+            ids = Array()
+            $(features).each (ix, feature) ->
+              ids.push feature.get('id')
+            $.ajax(url: "/requests", dataType: 'script', data: { ids: ids })
+          else
+            # Zoom in
+            map.getView().setCenter e.coordinate
+            current_zoom = map.getView().getZoom()
+            if current_zoom == undefined
+              current_zoom = zoom
+            map.getView().setZoom parseInt(current_zoom + 1)
 
 
 class KS.Styles
@@ -149,6 +171,7 @@ class KS.FeatureVector
           $.each response, (index, elem) ->
             coord = ol.proj.transform([elem.long, elem.lat], 'EPSG:4326', 'EPSG:25833')
             features.push new (ol.Feature)(
+              id: elem.service_request_id
               geometry: new (ol.geom.Point)(coord)
               icon: elem.icon_map
             )
