--- a/app/assets/javascripts/maps.coffee.erb
+++ b/app/assets/javascripts/maps.coffee.erb
@@ -1,9 +1,3 @@
-# Place all the behaviors and hooks related to the matching controller here.
-# All this logic will automatically be available in application.js.
-# You can use CoffeeScript in this file: http://coffeescript.org/
-
-maxZoom = 10
-
 KS.projection = ->
   if typeof proj4 is 'function'
     proj4.defs 'EPSG:25833', '+proj=utm +zone=33 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs'
@@ -15,6 +9,9 @@ KS.projection = ->
   else
     console.log 'Proj4J ist nicht geladen!'
 
+KS.maxZoom = 10
+
+
 class KS.Map
   constructor: (@projection = KS.projection()) ->
     @olMap = new ol.Map
@@ -23,7 +20,7 @@ class KS.Map
         projection: @projection
         center: [395965.1854276612, 5994624.339351959] #[313356.88711652, 6002555.7959791]
         zoom: 2
-        maxZoom: maxZoom
+        maxZoom: KS.maxZoom
 
     KS.layers = new KS.Layers(@olMap)
     addControls(@olMap)
@@ -52,7 +49,7 @@ class KS.Map
           if features.length == 1
             # Single feature -> show
             $.ajax(url: "/requests/" + features[0].get("id"), dataType: 'script')
-          else if map.getView().getZoom() == maxZoom
+          else if map.getView().getZoom() == KS.maxZoom
             ids = Array()
             $(features).each (ix, feature) ->
               ids.push feature.get('id')
