--- a/app/assets/javascripts/maps.coffee.erb
+++ b/app/assets/javascripts/maps.coffee.erb
@@ -10,7 +10,8 @@ KS.projection = ->
     console.log 'Proj4J ist nicht geladen!'
 
 KS.maxZoom = 10
-
+KS.projectionWGS84 = ol.proj.get 'EPSG:4326'
+KS.zoomEvent = false
 
 class KS.Map
   constructor: (@projection = KS.projection()) ->
@@ -37,7 +38,7 @@ class KS.Map
       className: 'll-mouse-position'
       target: document.getElementById('ol-overlaycontainer-stopevent')
       coordinateFormat: ol.coordinate.createStringXY(6)
-      projection: 'EPSG:4326'
+      projection: KS.projectionWGS84
       undefinedHTML: '?,?'
 
     map.addControl new ol.control.ScaleLine
@@ -61,6 +62,19 @@ class KS.Map
             if current_zoom == undefined
               current_zoom = zoom
             map.getView().setZoom parseInt(current_zoom + 1)
+
+    map.on 'moveend', (e) ->
+      if !KS.zoomEvent && KS.layers.findById("features").getSource().getFeatures().length > 0
+        #console.log "moved"
+        extent = KS.olMap.getView().calculateExtent(KS.olMap.getSize())
+        KS.featureData("/requests", extent, KS.layers.findById("features").getSource().getSource())
+        KS.featureData("/jobs", extent, KS.layers.findById("jobs").getSource().getSource())
+
+      KS.zoomEvent = false if KS.zoomEvent
+
+    map.getView().on 'change:resolution', (e) ->
+      #console.log "view change:resolution"
+      KS.zoomEvent = true
 
 
 class KS.Styles
@@ -163,19 +177,27 @@ class KS.FeatureVector
     return vector = new ol.source.ServerVector
       format: new (ol.format.TopoJSON)
       loader: (extent, resolution, projection) ->
-        $.ajax(url: controller, dataType: 'json').done (response) ->
-          features = new Array
-          $.each response, (index, elem) ->
-            coord = ol.proj.transform([elem.long, elem.lat], 'EPSG:4326', 'EPSG:25833')
-            features.push new (ol.Feature)(
-              id: elem.service_request_id
-              geometry: new (ol.geom.Point)(coord)
-              icon: elem.icon_map
-            )
-          vector.clear true
-          vector.addFeatures features
-      projection: 'EPSG:25833'
+        KS.featureData(controller, extent, vector)
+      projection: KS.projection()
 
+class KS.featureData
+  constructor: (controller, extent, vector) ->
+    ls = new ol.geom.LineString([ol.extent.getBottomLeft(extent), ol.extent.getTopRight(extent)])
+    extent = ol.proj.transformExtent(extent, KS.projection(), KS.projectionWGS84)
+    $.ajax(url: controller, dataType: 'json', data: {
+      center: ol.extent.getCenter(extent),
+      radius: ol.sphere.WGS84.haversineDistance(ol.extent.getBottomLeft(extent), ol.extent.getCenter(extent))
+    }).done (response) ->
+      features = new Array
+      $.each response, (index, elem) ->
+        coord = ol.proj.transform([elem.long, elem.lat], KS.projectionWGS84, KS.projection())
+        features.push new (ol.Feature)(
+          id: elem.service_request_id
+          geometry: new (ol.geom.Point)(coord)
+          icon: elem.icon_map
+        )
+      vector.clear true
+      vector.addFeatures features
 
 $ ->
   KS.olMap = new KS.Map
